<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer_function">

    <TextView
        android:id="@+id/showTimer"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        android:text="@string/timerZero"
        android:textSize="80sp"
        android:typeface="normal"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectName" />

    <TextView
        android:id="@+id/objectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/objectName"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/startTimer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/start"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minute_down"
        app:srcCompat="@drawable/ic_start_timer"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/pauseTimer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minute_down"
        app:srcCompat="@drawable/ic_pause_timer"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimer"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_list"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/minute_up"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/minute_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectName"
        app:srcCompat="@drawable/ic_up" />

    <ImageView
        android:id="@+id/second_up"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:contentDescription="@string/second_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectName"
        app:srcCompat="@drawable/ic_up" />

    <ImageView
        android:id="@+id/minute_down"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:contentDescription="@string/minute_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTimer"
        app:srcCompat="@drawable/ic_down" />

    <ImageView
        android:id="@+id/second_down"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:contentDescription="@string/second_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTimer"
        app:srcCompat="@drawable/ic_down" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="128dp" />

</androidx.constraintlayout.widget.ConstraintLayout>